[Feature-add]svd + lstm + swagger
